<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fuel Frenzy Racing</string>
    <string name="main_title">Fuel Frenzy Racing</string>
    <string name="btn_garage">Garage</string>
    <string name="btn_race">Race</string>
    <string name="btn_stats">Stats</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_select_vehicle">Select Vehicle</string>
    <string name="btn_mix_fuel">Mix Fuel</string>
    <string name="btn_select_track">Select Track</string>
    <string name="btn_start_race">Start Race</string>
    <string name="btn_back">Back</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_extreme">Extreme</string>
</resources>
